--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,13 @@ abstract: 'Greeting from Perl.'
 author:
   - 'Kang-min Liu  C<< <gugod@gugod.org> >>'
 build_requires:
+  ExtUtils::MakeMaker: 6.62
   Test::More: 0.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.62
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.04'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,7 +21,7 @@ no_index:
     - inc
     - t
 requires:
-  perl: 5.6.0
+  perl: 5.12.3
   self: 0
 resources:
   license: http://dev.perl.org/licenses/
